k8s/oracle-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oracle-deployment
  labels:
    app: oracle-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oracle-db
  template:
    metadata:
      labels:
        app: oracle-db
    spec:
      containers:
        - name: oracle-free
          image: gvenzl/oracle-free:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 1521
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1500m"
---
apiVersion: v1
kind: Service
metadata:
  name: oracle-service
  labels:
    app: oracle-db
spec:
  ports:
    - port: 1521
      targetPort: 1521
  selector:
    app: oracle-db
